# JiggyJoystick

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ros2  EXPERIMENT_ANALYSIS.md  README.md  SETUP.md  docker-compose.minimal.yml  docker-compose.yml  experiment_analyzer.py  five_bar_kinematics.py  log_visualization.py  test_analysis_workflow.py
debug_tools/: README.md  debug_suite.sh  run_system_monitor.sh  run_topic_debugger.sh  topic_debugger.py
docs/: DYNAMIC_FORCE_FIELDS.md  ROBOT_KINEMATICS.md  TEENSY_SIMULATION.md
microros_ws/: .gitignore
microros_ws/.devcontainer/: Dockerfile  devcontainer.json
ros2_ws/: .gitgnore  devcontainer_setup.md  subscription_log_20250331_163438.txt
ros2_ws/.devcontainer/: Dockerfile  devcontainer.json
ros2_ws/debug_tools/: log_analyzer.py  system_monitor.py
ros2_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/custom_interfaces/action/: TrialAction.action
ros2_ws/src/custom_interfaces/srv/: LoadConfig.srv
ros2_ws/src/my_pubsub_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_pubsub_pkg/my_pubsub_pkg/: publisher.py  subscriber.py
ros2_ws/src/robot_orchestrator/: package.xml  setup.py
ros2_ws/src/robot_orchestrator/config/: assays.yaml
ros2_ws/src/robot_orchestrator/launch/: robot_orchestrator_launch.py
ros2_ws/src/robot_orchestrator/robot_orchestrator/: config_loader.py  main.py
ros2_ws/src/robot_system/: package.xml  setup.py
ros2_ws/src/robot_system/config/: assays.yaml
scripts/: detect_teensy_port.sh  entrypoint.sh  start_system.sh
(+1 files in other folders)
